# sniffer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
examples/: sniffer1.rs  sniffer2.rs  sniffer3.rs
sniffer-cli/: Cargo.toml
sniffer-cli/examples/: sniffer2.rs  sniffer3.rs
sniffer-cli/src/: config.rs  lib.rs  main.rs  packet.rs
sniffer-cli/src/networking/types/: h2c.rs  hpack.rs  packet.rs  quic.rs  tls.rs
sniffer-cli/src/utils/: mod.rs  registry.rs
sniffer-gui/: .gitignore  package.json  pnpm-lock.yaml
sniffer-gui/src/: App.vue  i18n.ts  main.ts  router.ts
sniffer-gui/src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
sniffer-gui/src-tauri/src/: aggregator.rs  cache.rs  capture.rs  lib.rs  log_layer.rs  log_ws.rs  main.rs  models.rs  pcap_writer.rs  process.rs  process_connection.rs
sniffer-gui/src-tauri/src/cmd/: connections.rs  logs.rs  mod.rs  stats.rs
sniffer-gui/src-tauri/src/platform/macos/: mod.rs  process_connection.rs
sniffer-gui/src/components/: ConnectionsTable.vue  MenuBar.vue  StatusBar.vue  VirtualList.vue
sniffer-gui/src/locales/: zh-CN.json
sniffer-gui/src/pages/: connection.vue  index.vue  log.vue
sniffer-gui/src/types/: connection.ts
src/: config.rs  main.rs  packet.rs
src/networking/types/: h2c.rs  mod.rs  packet.rs  quic.rs  tls.rs
src/utils/: registry.rs
