[package]
name = "sniffer"
version = "0.1.0"
edition = "2024"

[[example]]
name = "sniffer1"
path = "examples/sniffer1.rs"

[[example]]
name = "sniffer2"
path = "examples/sniffer2.rs"

[[example]]
name = "sniffer3"
path = "examples/sniffer3.rs"

[dependencies]
pcap = "2.4.0"
pnet = "0.28.0"
pnet_datalink = "0.35.0"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["time", "env-filter"] }
enum_primitive = "0.1.1"
httparse = "1.10.1"
tls-parser = "0.12.2"
hex = "0.4.3"
bytesize = "1.1.0"
ring = "0.16.20"
hmac-sha256 = "1.1"
aes = "0.8"          # 使用 cipher 0.4
ctr = "0.9"
ecb = "0.1"# 使用 cipher 0.4（与 aes 0.8 兼容）
cipher = "0.4"
time = {version = "0.3.47", features = ["macros"]}
hpack_codec = "0.1.1"
dns-parser = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }