[package]
name = "sniffer-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sniffer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sniffer = { path = "../../sniffer-cli" }  # 引用父目录的 lib
netstat2="0.11.2"
sysinfo="0.30.13"
lazy_static = "1.5.0"
dirs = "6.0.0"
base64 = "0.21.7"
winapi = "0.3.9"
image = "0.25.10"
tempfile = "3.27.0"
md5="0.8.0"
tokio = { version = "1.49.0",  features = ["full", "macros"] }
pnet = "0.28.0"
pnet_datalink = "0.35.0"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["time", "env-filter"] }
time = "0.3.20"
pcap = "2.4.0"
bytesize = "1.1.0"
pcap-file = "1.1"
async-channel = "2.5.0"
libproc = "0.14.11"
tracing-appender = "0.2"
tokio-tungstenite = "0.24"
futures-util = "0.3"

